--- a/_assets/adoc/docinfo.html
+++ b/_assets/adoc/docinfo.html
@@ -73,7 +73,7 @@ span.play em,
 .listingblock pre[class=highlight][lang] .hl.ipl {
   color: #d27b53;
 }
-.listingblock pre[class=highlight][lang] .hl.str {
+.listingblock pre[class=highlight][lang] .hl.sng {
   color: #99cc99;
 }
 .listingblock pre[class=highlight][lang] .hl.ppc {
@@ -142,7 +142,7 @@ span.play em,
 .listingblock pre[class=highlight][lang=alan] .hl.ipl {
   color: #d572f1;
 }
-.listingblock pre[class=highlight][lang=alan] .hl.str {
+.listingblock pre[class=highlight][lang=alan] .hl.sng {
   color: #008080;
 }
 .listingblock pre[class=highlight][lang=alan] .hl.slc {
@@ -199,7 +199,7 @@ span.play em,
 .listingblock.lib pre[class=highlight][lang=alan] .hl.ipl {
   color: #d27b53;
 }
-.listingblock.lib pre[class=highlight][lang=alan] .hl.str {
+.listingblock.lib pre[class=highlight][lang=alan] .hl.sng {
   color: #99cc99;
 }
 .listingblock.lib pre[class=highlight][lang=alan] .hl.slc {
@@ -256,7 +256,7 @@ span.play em,
 .listingblock.tutorial pre[class=highlight][lang=alan] .hl.ipl {
   color: #3971ED;
 }
-.listingblock.tutorial pre[class=highlight][lang=alan] .hl.str {
+.listingblock.tutorial pre[class=highlight][lang=alan] .hl.sng {
   color: #198844;
 }
 .listingblock.tutorial pre[class=highlight][lang=alan] .hl.slc {
